manifest/pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: golang-ms
spec:
  containers:
    - name: golang-ms
      image: "enomoto/golang-ms:latest"
