manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golang-ms
spec:
  type: LoadBalancer
  selector:
    app: golang-ms
  ports:
  - port: 80
    targetPort: 9001
